--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -45,7 +45,6 @@
                                 <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stopRecordingAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HwD-zL-sVb"/>
-                                    <segue destination="QGe-t6-X7a" kind="show" id="ANn-Bm-MF8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -66,16 +65,17 @@
                         <outlet property="recordButton" destination="Prg-YO-7zB" id="jga-sg-VkS"/>
                         <outlet property="recordingLabel" destination="ihH-wu-ZQH" id="tmT-8f-UQJ"/>
                         <outlet property="stopRecordingButton" destination="UHy-Qi-Ktw" id="689-V5-Je1"/>
+                        <segue destination="QGe-t6-X7a" kind="show" identifier="stopRecording" id="ESc-Z1-sGe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="796" y="118.29085457271366"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="jU5-lp-71y">
             <objects>
-                <viewController id="QGe-t6-X7a" sceneMemberID="viewController">
+                <viewController id="QGe-t6-X7a" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="l4m-oq-5I0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -87,8 +87,66 @@
                                 <nil key="textColor"/>
                                 <color key="highlightedColor" red="1" green="0.88651021173393552" blue="0.089848846282455597" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Hef-4z-MaX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="620"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vYE-lW-hAj">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="155"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w3U-wM-uSy" userLabel="slowButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="Slow"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qCM-Ft-hx1" userLabel="fastButton">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="Fast"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zCj-Ef-PY8">
+                                        <rect key="frame" x="0.0" y="155" width="375" height="155"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KbW-mO-rjZ" userLabel="highPitchButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="HighPitch"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fWd-zr-WkZ" userLabel="lowPitchButton">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="LowPitch"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="szA-rB-4mw">
+                                        <rect key="frame" x="0.0" y="310" width="375" height="155"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adL-fr-P1s">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="Reverb"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdQ-Ow-Obu">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="155"/>
+                                                <state key="normal" image="Echo"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6D-Nl-dh1">
+                                        <rect key="frame" x="0.0" y="465" width="375" height="155"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="375" id="FId-iL-fUD" userLabel="width = 64"/>
+                                            <constraint firstAttribute="height" constant="150.5" id="ZcF-gE-I5R" userLabel="height = 64"/>
+                                        </constraints>
+                                        <state key="normal" image="Stop"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hef-4z-MaX" firstAttribute="top" secondItem="blt-GN-tYH" secondAttribute="top" id="1Oa-1k-AlM"/>
+                            <constraint firstItem="Hef-4z-MaX" firstAttribute="leading" secondItem="blt-GN-tYH" secondAttribute="leading" id="6vs-Ze-x2x"/>
+                            <constraint firstItem="blt-GN-tYH" firstAttribute="trailing" secondItem="Hef-4z-MaX" secondAttribute="trailing" id="KQS-9e-tXK"/>
+                            <constraint firstItem="blt-GN-tYH" firstAttribute="bottom" secondItem="Hef-4z-MaX" secondAttribute="bottom" id="ZZC-KV-UkV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="blt-GN-tYH"/>
                     </view>
                 </viewController>
@@ -116,7 +174,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
         <image name="Record" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
     </resources>
 </document>
