--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -87,6 +87,10 @@
                                 <nil key="textColor"/>
                                 <color key="highlightedColor" red="1" green="0.88651021173393552" blue="0.089848846282455597" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="K9J-qt-te5">
+                                <rect key="frame" x="132" y="233" width="110" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Hef-4z-MaX">
                                 <rect key="frame" x="0.0" y="64" width="375" height="620"/>
                                 <subviews>
@@ -119,24 +123,29 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="szA-rB-4mw">
                                         <rect key="frame" x="0.0" y="310" width="375" height="155"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adL-fr-P1s">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adL-fr-P1s" userLabel="reverbButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="187.5" height="155"/>
                                                 <state key="normal" image="Reverb"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdQ-Ow-Obu">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdQ-Ow-Obu" userLabel="echoButton">
                                                 <rect key="frame" x="187.5" y="0.0" width="187.5" height="155"/>
                                                 <state key="normal" image="Echo"/>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6D-Nl-dh1">
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dvF-Ou-wXj">
                                         <rect key="frame" x="0.0" y="465" width="375" height="155"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="375" id="FId-iL-fUD" userLabel="width = 64"/>
-                                            <constraint firstAttribute="height" constant="150.5" id="ZcF-gE-I5R" userLabel="height = 64"/>
-                                        </constraints>
-                                        <state key="normal" image="Stop"/>
-                                    </button>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6D-Nl-dh1" userLabel="stopButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="155"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="375" id="FId-iL-fUD" userLabel="width = 64"/>
+                                                    <constraint firstAttribute="height" constant="64" id="ZcF-gE-I5R" userLabel="height = 64"/>
+                                                </constraints>
+                                                <state key="normal" image="Stop"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
